--- a/BasicMVC/Views/Home/Index.cshtml
+++ b/BasicMVC/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Hello World, its Matt!</p>
+    <p>Hello World, Matt now has a Github Repo connected.</p>
 </div>
