--- a/BasicMVC/Views/_ViewImports.cshtml
+++ b/BasicMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using ContosoUniversity
 @using ContosoUniversity.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+
+// <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="HomePage">xxx</a> 
+
